--- a/package.json
+++ b/package.json
@@ -16,34 +16,34 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^4.1.3",
-    "@angular/common": "4.1.3",
-    "@angular/compiler": "4.1.3",
-    "@angular/core": "4.1.3",
-    "@angular/forms": "4.1.3",
-    "@angular/http": "4.1.3",
-    "@angular/platform-browser": "4.1.3",
-    "@angular/platform-browser-dynamic": "4.1.3",
-    "@angular/router": "4.1.3",
-    "@angular/upgrade": "4.1.3",
+    "@angular/animations": "^4.2.3",
+    "@angular/common": "4.2.3",
+    "@angular/compiler": "4.2.3",
+    "@angular/core": "4.2.3",
+    "@angular/forms": "4.2.3",
+    "@angular/http": "4.2.3",
+    "@angular/platform-browser": "4.2.3",
+    "@angular/platform-browser-dynamic": "4.2.3",
+    "@angular/router": "4.2.3",
+    "@angular/upgrade": "4.2.3",
     "chart.js": "2.6.0",
     "core-js": "2.4.1",
     "font-awesome": "^4.7.0",
     "moment": "2.18.1",
     "ng2-charts": "1.6.0",
     "ngx-bootstrap": "1.7.1",
-    "primeng": "^4.0.3",
-    "rxjs": "5.4.0",
+    "primeng": "^4.1.0-rc.1",
+    "rxjs": "5.4.1",
     "ts-helpers": "1.1.2",
-    "zone.js": "0.8.11"
+    "zone.js": "0.8.12"
   },
   "devDependencies": {
-    "@angular/cli": "^1.1.0",
-    "@angular/compiler-cli": "4.1.3",
-    "@types/jasmine": "2.5.51",
-    "@types/node": "7.0.27",
+    "@angular/cli": "^1.1.2",
+    "@angular/compiler-cli": "4.2.3",
+    "@types/jasmine": "2.5.52",
+    "@types/node": "7.0.31",
     "codelyzer": "3.0.1",
-    "jasmine-core": "2.6.2",
+    "jasmine-core": "2.6.3",
     "jasmine-spec-reporter": "4.1.0",
     "karma": "1.7.0",
     "karma-chrome-launcher": "2.1.1",
@@ -52,8 +52,8 @@
     "karma-jasmine": "1.1.0",
     "karma-jasmine-html-reporter": "0.2.2",
     "protractor": "5.1.2",
-    "ts-node": "3.0.4",
-    "tslint": "5.4.2",
+    "ts-node": "3.0.6",
+    "tslint": "5.4.3",
     "typescript": "2.3.4"
   }
 }
