--- a/package.json
+++ b/package.json
@@ -16,33 +16,33 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^4.2.4",
-    "@angular/common": "4.2.4",
-    "@angular/compiler": "4.2.4",
-    "@angular/core": "4.2.4",
-    "@angular/forms": "4.2.4",
-    "@angular/http": "4.2.4",
-    "@angular/platform-browser": "4.2.4",
-    "@angular/platform-browser-dynamic": "4.2.4",
-    "@angular/router": "4.2.4",
-    "@angular/upgrade": "4.2.4",
+    "@angular/animations": "^4.3.1",
+    "@angular/common": "4.3.1",
+    "@angular/compiler": "4.3.1",
+    "@angular/core": "4.3.1",
+    "@angular/forms": "4.3.1",
+    "@angular/http": "4.3.1",
+    "@angular/platform-browser": "4.3.1",
+    "@angular/platform-browser-dynamic": "4.3.1",
+    "@angular/router": "4.3.1",
+    "@angular/upgrade": "4.3.1",
     "chart.js": "2.6.0",
     "core-js": "2.4.1",
     "font-awesome": "^4.7.0",
     "moment": "2.18.1",
     "ng2-charts": "1.6.0",
-    "ngx-bootstrap": "1.7.1",
-    "primeng": "^4.1.0-rc.2",
-    "rxjs": "5.4.1",
+    "ngx-bootstrap": "1.8.0",
+    "primeng": "^4.1.1",
+    "rxjs": "5.4.2",
     "ts-helpers": "1.1.2",
-    "zone.js": "0.8.12"
+    "zone.js": "0.8.14"
   },
   "devDependencies": {
-    "@angular/cli": "^1.1.3",
-    "@angular/compiler-cli": "4.2.4",
+    "@angular/cli": "^1.2.2",
+    "@angular/compiler-cli": "4.3.1",
     "@types/jasmine": "2.5.53",
-    "@types/node": "8.0.4",
-    "codelyzer": "3.1.1",
+    "@types/node": "8.0.14",
+    "codelyzer": "3.1.2",
     "jasmine-core": "2.6.4",
     "jasmine-spec-reporter": "4.1.1",
     "karma": "1.7.0",
@@ -52,8 +52,8 @@
     "karma-jasmine": "1.1.0",
     "karma-jasmine-html-reporter": "0.2.2",
     "protractor": "5.1.2",
-    "ts-node": "3.1.0",
-    "tslint": "5.4.3",
-    "typescript": "2.3.4"
+    "ts-node": "3.2.1",
+    "tslint": "5.5.0",
+    "typescript": "2.4.2"
   }
 }
